--- a/balancing-robot/Cargo.toml
+++ b/balancing-robot/Cargo.toml
@@ -12,45 +12,10 @@ path = "./src/bin/main.rs"
 esp-bootloader-esp-idf = { version = "0.2.0", features = ["esp32c3"] }
 esp-hal                = { version = "=1.0.0-rc.0", features = ["esp32c3", "unstable"] }
 
-embassy-net = { version = "0.7.0", features = [
-  "dhcpv4",
-  "medium-ethernet",
-  "tcp",
-  "udp",
-] }
-embedded-io = "0.6.1"
-embedded-io-async = "0.6.1"
-esp-alloc = "0.8.0"
-# for more networking protocol support see https://crates.io/crates/edge-net
 critical-section = "1.2.0"
-embassy-executor = { version = "0.7.0", features = ["task-arena-size-20480"] }
-embassy-time = "0.4.0"
-esp-hal-embassy = { version = "0.9.0", features = ["esp32c3"] }
-esp-wifi = { version = "0.15.0", features = [
-  "builtin-scheduler",
-  "esp-alloc",
-  "esp32c3",
-  "smoltcp",
-  "wifi",
-] }
-smoltcp = { version = "0.12.0", default-features = false, features = [
-  "medium-ethernet",
-  "multicast",
-  "proto-dhcpv4",
-  "proto-dns",
-  "proto-ipv4",
-  "socket-dns",
-  "socket-icmp",
-  "socket-raw",
-  "socket-tcp",
-  "socket-udp",
-] }
-static_cell = "2.1.1"
+esp-alloc        = "0.8.0"
+eskf = "0.2.0"
 
-esp-println = {version="0.15.0", features=["esp32c3"]}
-liquid_crystal = "0.2.0"
-icm42670 = "0.2.0"
-shared-bus = {version="0.3.1"}
 
 [profile.dev]
 # Rust debug is too slow.
